# bgr-mags-addons

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/magsdetector/: CMakeLists.txt  app.cpp  app.h  crosscorr.ipp  detector.cpp  detector.h  filter.h  ringbuffer.ipp
apps/magsdetector/config/: magsdetector.cfg
apps/magsdetector/descriptions/: magsdetector.xml
bgr/apps/magsdetector/: crosscorr.h  main.cpp  ringbuffer.h  test.cpp
bgr/apps/magsdetector/descriptions/: magsdetector.rst
src/apps/magsdetector/: filter.cpp
